# EDH

./: CMakeLists.txt  README.md  edh_plugin.cpp  edh_plugin.def
cmake/: edh_gen_embedded.cmake
resources/: default.cfg  embed_EN.json  embed_NL.json
